# MetLab11

./: .gitignore  PROMPT_LOG.md  README.md  docker-compose.yml
.github/workflows/: repo-check.yml
go-app/: Dockerfile  README.md  go.mod  main.go  main_test.go
python-app/: README.md  app.py  requirements.txt  test_app.py  test_config.py
rust-app/: Cargo.toml  Dockerfile  README.md
rust-app/src/: lib.rs  main.rs
rust-app/tests/: config_tests.rs  integration_tests.rs
scripts/: repo_check.py  run_tests.bat  run_tests.py  run_tests.sh
